--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,5 +1,6 @@
 project:
   type: website
+  output-dir: docs
 
 website:
   title: "Data Lab"
@@ -7,12 +8,12 @@ website:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/
-      - icon: twitter
-        href: https://twitter.com
+        href: https://github.com/Sghizzus/ivanmarino
 format:
   html:
-    theme: cosmo
+    theme: 
+      - cerulean
+      - brand
     css: styles.css
 
 editor: visual
