Corretto alcuni link

--- a/_brand.yml
+++ b/_brand.yml
@@ -3,8 +3,8 @@ meta:
     short: Data Lab
     full: Data Lab di Ivan
   link:
-    home: https://datalabdiivan.com
-    github: https://github.com/Sghizzus/ivanmarino
+    home: https://sghizzus.github.io/Data-Lab/
+    github: https://github.com/Sghizzus/
 
 logo:
   images:
