--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ website:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/Sghizzus/ivanmarino
+        href: https://github.com/Sghizzus/
 format:
   html:
     theme: 
